shekoofeh-shojai-classA

--- a/Websit with html css/index.html
+++ b/Websit with html css/index.html
@@ -9,7 +9,20 @@
 </head>
 <body>
     <header>
-        hiiiii
+        <nav>
+            <img src="./images/logo.png" alt="" class="logo">
+
+            <ul class="nav-links">
+
+                <li><a href="#">Popular places</a></li>
+                <li><a href="#">travel Outside</a></li>
+                 <li><a href="#">Online Packages</a></li>
+
+            </ul>
+            <a href="#" class="register-btn">Register Now</a>
+        
+        
+        </nav>
     </header>
 </body>
 </html>
