shekoofeh-shojai-classA

--- a/Websit with html css/index.html
+++ b/Websit with html css/index.html
@@ -23,6 +23,40 @@
         
         
         </nav>
+        <section class="continer">
+            <h1>Find Your Next Stay</h1>
+            <section class="serch-bar">
+                <form>
+                    <section>
+                        <label>Location</label>
+                        <input type="text" placeholder="where are you going?">
+                    </section>
+
+                    <!-- sction2 -->
+
+                    <section>
+                        <label>Check in</label>
+                        <input type="text" placeholder="Add Date">
+                    </section>
+
+                    <!-- section3 -->
+
+                     <section>
+                        <label>Check out</label>
+                        <input type="text" placeholder="Add Date">
+                    </section>
+                    <!-- section4 -->
+
+                     <section>
+                        <label>Guest</label>
+                        <input type="text" placeholder="Add Gust">
+                    </section>
+                    <button type="submit"><img src="./images/search.png" alt=""></button>
+
+                </form>
+
+            </section>
+        </section>
     </header>
 </body>
 </html>
