shekoofeh-shojai-classA

--- a/Websit with html css/index.html
+++ b/Websit with html css/index.html
@@ -27,7 +27,7 @@
             <h1>Find Your Next Stay</h1>
             <section class="serch-bar">
                 <form>
-                    <section>
+                    <section class="location-input">
                         <label>Location</label>
                         <input type="text" placeholder="where are you going?">
                     </section>
