--- a/Websit with html css/index.html
+++ b/Websit with html css/index.html
@@ -58,5 +58,134 @@
             </section>
         </section>
     </header>
+
+
+    <!-- main -->
+
+
+    <main class="continer">
+        <h2 class="sub-title">Exclusives</h2>
+        <section class="Exclusives">
+            <picture>
+                <img src="./images/image-1.png">
+                <span>
+                    <h3>London</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </picture>
+
+            <!-- pictur2 -->
+            <picture>
+                <img src="./images/image-2.png">
+                <span>
+                    <h3>London</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </picture>
+
+            <!-- pictur3 -->
+            <picture>
+                <img src="./images/image-3.png">
+                <span>
+                    <h3>London</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </picture>
+
+             <!-- pictur4 -->
+            <picture>
+                <img src="./images/image-4.png">
+                <span>
+                    <h3>London</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </picture>
+
+            <!-- pictur5 -->
+            <picture>
+                <img src="./images/image-5.png">
+                <span>
+                    <h3>London</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </picture>
+
+            <!-- pictur6 -->
+            <picture>
+                <img src="./images/image-5.png">
+                <span>
+                    <h3>London</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </picture>
+
+            <!-- pictur7 -->
+            <picture>
+                <img src="./images/image-5.png">
+                <span>
+                    <h3>London</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </picture>
+
+            <!-- pictur8 -->
+            <picture>
+                <img src="./images/image-5.png">
+                <span>
+                    <h3>London</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </picture>
+
+            <!-- pictur9 -->
+            <picture>
+                <img src="./images/image-5.png">
+                <span>
+                    <h3>London</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </picture>
+
+
+            <!-- pictur10 -->
+            <picture>
+                <img src="./images/image-5.png">
+                <span>
+                    <h3>London</h3>
+                    <p>Starts @ $250</p>
+                </span>
+            </picture>
+
+        </section> 
+       
+        <!--trending  -->
+        <h2 class="sub-title">Trending Places</h2>
+        <section class="trending">
+
+            <picture>
+                <img src="./images/dubai.png" alt="">
+                <h3>Dubai</h3>
+            </picture>
+
+            <!-- 2 -->
+             <picture>
+                <img src="./images/new-york.png" alt="">
+                <h3>New York</h3>
+            </picture>
+            <!-- 3 -->
+             <picture>
+                <img src="./images/paris.png" alt="">
+                <h3>Paris</h3>
+            </picture>
+
+            <!-- 4 -->
+             <picture>
+                <img src="./images/new-delhi.png" alt="">
+                <h3>Delhi</h3>
+            </picture>
+
+        </section>
+
+    </main>
 </body>
 </html>
