--- a/Websit with html css/index.html
+++ b/Websit with html css/index.html
@@ -181,9 +181,14 @@
             <!-- 4 -->
              <picture>
                 <img src="./images/new-delhi.png" alt="">
-                <h3>Delhi</h3>
+                <h3> New Delhi</h3>
             </picture>
 
+        </section>
+
+        <section class="cta">
+            <h3>Sharing Is Earning Now</h3>
+            <p>Great opportunit to make mony by sharing your extra space</p>
         </section>
 
     </main>
