shekoofeh-shojai-classA

--- a/Websit with html css/index.html
+++ b/Websit with html css/index.html
@@ -185,10 +185,12 @@
             </picture>
 
         </section>
-
+        
+        <!-- cta -->
         <section class="cta">
-            <h3>Sharing Is Earning Now</h3>
-            <p>Great opportunit to make mony by sharing your extra space</p>
+            <h3>Sharing <br> Is Earning Now</h3>
+            <p>Great opportunit to make mony by <br>sharing your extra space</p>
+            <a href="#" class="cta-btn">Know More</a>
         </section>
 
     </main>
