shekoofeh-shojai-classA

--- a/Websit with html css/index.html
+++ b/Websit with html css/index.html
@@ -217,11 +217,23 @@
                 <p>Popular European countries with a budget of just $10,000</p>
             </picture>
         </section>
-
+         
+        <!-- btn   Start Making Money-->
         <a href="#" class="start-btn"> Start Making Money</a>
 
+       <!-- about-mssg -->
+        <section class="about-mssg">
 
+             <h2>About Staybnb</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quos beatae perspiciatis explicabo nesciunt itaque facilis inventore officiis magni necessitatibus minima corporis deserunt, blanditiis voluptates odit temporibus quibusdam possimus exercitationem numquam provident! Sit nisi omnis inventore a fuga iusto! Quidem aspernatur quam dolore tempora doloremque? Excepturi impedit dolorum ea blanditiis.</p>
+     </div>
+      
+    </div>
 
+</body>
+</html>
+
+        </section>
 
 
     </main>
