shekoofeh-shojai-classA

--- a/Websit with html css/pageTwo.html
+++ b/Websit with html css/pageTwo.html
@@ -11,8 +11,8 @@
 
     <body>
 
-        <nav id="navBar">
-            <img src="./images/logo.png" alt="" class="logo">
+        <nav id="navBar" class="navbar-white">
+            <img src="./images/logo-red.png" alt="" class="logo">
 
             <ul class="nav-links">
 
@@ -27,8 +27,42 @@
         </nav>
 
 
+      <!-- continer -->
+      <main class="continer">
+       <section class="list-continer"> 
+           <section class="left-col">
+               <p>200+Options</p>
+               <h1>Recommended Places In Sn Francisco</h1>
+               <section class="house">
 
-      <footer>
+                        <picture class="house-img">
+                            <img src="./images/image-s1.png">
+
+                        </picture>
+
+                        <picture class="house-info">
+                            <p>Private Villa in san Francisco</p>
+                            <h3>Deluxe Queeen Room With Street View</h3>
+                            <p>1 Bedroom / 1 Bathroom /Wifi / kitchen</p>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                             <i class="far fa-star"></i>
+                        </picture>
+
+
+                </section>
+           </section>
+
+
+       </section>
+
+      </main>
+
+    <!-- footer -->
+    
+      <footer class="continer">
         <a href="https://facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
         <a href="https://youtube.com/"><i class="fa-brands fa-youtube"></i></a>
         <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
