--- a/Websit with html css/pageTwo.html
+++ b/Websit with html css/pageTwo.html
@@ -274,8 +274,15 @@
         <!-- pagination -->
         <section class="pagination">
           <img src="./images/arrow.png">
+          <span class="current">1</span>
+          <span>2</span>
+          <span>3</span>
+          <span>4</span>
+          <span>5</span>
+          <span>&middot;&middot;&middot;&middot;</span>
+          <span>20</span>
 
-          <img src="./images/arrow.png">
+          <img src="./images/arrow.png"class ="right-arrow">
 
         </section>
 
