shekoofeh-shojai-classA

--- a/Websit with html css/house.html
+++ b/Websit with html css/house.html
@@ -42,7 +42,7 @@
 
 
                     </section>
-                    
+
                     <section>
 
                         <p>Location:San Francisco, California,United States</p>
@@ -51,6 +51,61 @@
                 </Section>
 
            </section>
+           <!-- gallery -->
+           <section class="gallery">
+                <picture class="gallery-img-1"><img src="./images/house-1.png"></picture>
+                <picture><img src="./images/house-2.png"></picture>
+                <picture><img src="./images/house-3.png"></picture>
+                <picture><img src="./images/house-4.png"></picture>
+                <picture><img src="./images/house-5.png"></picture>
+
+           </section>
+           <!-- small-detalis -->
+           <section class="small-detalis">
+                <h2>Entire rental unit hosted by Brandon</h2>
+                <p>2 guest &nbsp;&nbsp;2beds&nbsp;&nbsp;1bathroom</p>
+                <h4>$ 100 / day</h4>
+            
+            </section>
+
+            <hr class="line">
+            <form class="check-form">
+                <section>
+                    <label for="">check-in</label>
+                    <input type="text"placeholder="Add Date">
+                </section>
+
+                <!-- 2 -->
+                <section>
+                    <label for="">check-out</label>
+                    <input type="text"placeholder="Add Date">
+                </section>
+                <!-- 3 -->
+                <section class="guest-field">
+                    <label for="">Guest</label>
+                    <input type="text"placeholder="2 guest">
+                </section>
+                 <button type="submit">Check Availbility</button>
+            </form>
+
+            <!-- ul -->
+            <ul class="details-list">
+                <li>Entire Home
+                    <span>You Will have the entire flat for you</span>
+                </li>
+                <!-- 2 -->
+                 <li>Entire Home
+                    <span>You Will have the entire flat for you</span>
+                </li>
+                <!-- 3 -->
+                 <li>Entire Home
+                    <span>You Will have the entire flat for you</span>
+                </li>
+                <!-- 4 -->
+                 <li>Entire Home
+                    <span>You Will have the entire flat for you</span>
+                </li>
+            </ul>
        </section>
 
 
