shekoofeh-shojai-classA

--- a/Websit with html css/house.html
+++ b/Websit with html css/house.html
@@ -90,20 +90,29 @@
 
             <!-- ul -->
             <ul class="details-list">
-                <li>Entire Home
+                <li>
+                    <i class="fa-solid fa-house"></i>
+                    Entire Home
                     <span>You Will have the entire flat for you</span>
                 </li>
                 <!-- 2 -->
-                 <li>Entire Home
-                    <span>You Will have the entire flat for you</span>
+                 <li>
+                     <i class="fa-solid fa-paintbrush"></i>
+                    Enhanced Clean
+                    <span>This host has commited to dtaybnb's cleaning process.</span>
                 </li>
                 <!-- 3 -->
-                 <li>Entire Home
-                    <span>You Will have the entire flat for you</span>
+                 <li>
+                      <i class="fa-solid fa-location-dot"></i> 
+                    Great Location
+                    <span>90% of recent guests gave the location a 5 star rating.</span>
                 </li>
                 <!-- 4 -->
-                 <li>Entire Home
-                    <span>You Will have the entire flat for you</span>
+                 <li>
+                     <i class="fa-solid fa-heart"></i> 
+                    Great Check-in Experience
+                    <span>100% of recent guests gave the check-in process a 5 star rating
+            </span>
                 </li>
             </ul>
        </section>
