--- a/Websit with html css/index.html
+++ b/Websit with html css/index.html
@@ -16,8 +16,8 @@
             <ul class="nav-links">
 
                 <li><a href="#" class="active">Popular places</a></li>
-                <li><a href="pageTwo.html">travel Outside</a></li>
-                 <li><a href="house.html">Online Packages</a></li>
+                <li><a href="house.html">travel Outside</a></li>
+                 <li><a href="pageTwo.html">Online Packages</a></li>
 
             </ul>
             <a href="#" class="register-btn">Register Now</a>
