--- a/Websit with html css/pageTwo.html
+++ b/Websit with html css/pageTwo.html
@@ -17,8 +17,8 @@
             <ul class="nav-links">
 
                 <li><a href="index.html" class="active">Popular places</a></li>
-                <li><a href="#">travel Outside</a></li>
-                 <li><a href="house.html">Online Packages</a></li>
+                <li><a href="house.html">travel Outside</a></li>
+                 <li><a href="#">Online Packages</a></li>
 
             </ul>
             <a href="#" class="register-btn">Register Now</a>
